--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login</title>
+    <link rel="shortcut icon" href="{{ url_for('static', path='favicon.ico') }}" type="image/x-icon">
     <link
       href="{{ url_for('static', path='/css/main.css') }}"
       rel="stylesheet"
