--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -9,6 +9,7 @@
       href="{{ url_for('static', path='/css/main.css') }}"
       rel="stylesheet"
     />
+    <script src="{{ url_for('static', path='/js/lib.js') }}"></script>
   </head>
   <body>
     <script>
