--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -13,6 +13,7 @@
       href="{{ url_for('static', path='/css/main.css') }}"
       rel="stylesheet"
     />
+    <script src="{{ url_for('static', path='/js/lib.js') }}"></script>
   </head>
   <body>
     <script>
