feat: seperated the api and frontend

--- a/server/app/templates/dashboard.html
+++ b/server/app/templates/dashboard.html
@@ -53,7 +53,7 @@
 
         // // CASE: the user has not set his nickname yet
         // if (user.username === "") {
-          
+            // use Nanny for the state management.
         // }
       })();
     </script>
