--- a/server/app/templates/login.html
+++ b/server/app/templates/login.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Login | Fitness Tracker</title>
+    <title>Логин | Фитнес-трекер</title>
     <link
       rel="shortcut icon"
       href="{{ url_for('static', path='favicon.ico') }}"
@@ -36,7 +36,7 @@
               localStorage.setItem("refresh_token", refresh_token);
               window.location.href = "/dashboard";
             } else {
-              console.log("Invalid refresh token. Stay on the page.");
+              console.log("Недопустимый токен обновления. Оставайтесь на странице.");
             }
           }
         }
@@ -54,21 +54,21 @@
             <h1
               class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white"
             >
-              Sign in to your account
+            Войдите в свою учетную запись
             </h1>
             <div class="space-y-4 md:space-y-6">
               <div>
                 <label
                   for="email"
                   class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
-                  >Your email</label
+                  >Ваш адрес электронной почты</label
                 >
                 <input
                   type="email"
                   name="email"
                   id="email"
                   class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                  placeholder="name@company.com"
+                  placeholder="name@mail.ru"
                   required
                 />
               </div>
@@ -76,7 +76,7 @@
                 <label
                   for="password"
                   class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
-                  >Password</label
+                  >Пароль</label
                 >
                 <input
                   type="password"
@@ -102,7 +102,7 @@
                     <label
                       for="remember"
                       class="text-gray-500 dark:text-gray-300"
-                      >Remember me</label
+                      >Помни меня</label
                     >
                   </div>
                 </div>
@@ -117,11 +117,11 @@
                 Sign in
               </button>
               <p class="text-sm font-light text-gray-500 dark:text-gray-400">
-                Don’t have an account yet?
+                У вас еще нет учетной записи?
                 <a
                   href="/register"
                   class="font-medium text-primary-600 hover:underline dark:text-primary-500"
-                  >Register Now</a
+                  >Зарегистрируйтесь сейчас</a
                 >
               </p>
             </div>
@@ -152,10 +152,10 @@
               d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5Zm3.707 8.207-4 4a1 1 0 0 1-1.414 0l-2-2a1 1 0 0 1 1.414-1.414L9 10.586l3.293-3.293a1 1 0 0 1 1.414 1.414Z"
             />
           </svg>
-          <span class="sr-only">Check icon</span>
+          <span class="sr-only">Значок проверки</span>
         </div>
         <div class="ms-3 text-sm font-normal" id="toast-success-text">
-          Login Successful.
+          Вход в систему выполнен успешно.
         </div>
         <button
           type="button"
@@ -164,7 +164,7 @@
           aria-label="Close"
           onclick="closeToast('toast-success')"
         >
-          <span class="sr-only">Close</span>
+          <span class="sr-only">Закрывать</span>
           <svg
             class="w-3 h-3"
             aria-hidden="true"
@@ -202,10 +202,10 @@
               d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5Zm3.707 11.793a1 1 0 1 1-1.414 1.414L10 11.414l-2.293 2.293a1 1 0 0 1-1.414-1.414L8.586 10 6.293 7.707a1 1 0 0 1 1.414-1.414L10 8.586l2.293-2.293a1 1 0 0 1 1.414 1.414L11.414 10l2.293 2.293Z"
             />
           </svg>
-          <span class="sr-only">Error icon</span>
+          <span class="sr-only">Значок ошибки</span>
         </div>
         <div class="ms-3 text-sm font-normal" id="toast-danger-text">
-          Username of password incorrect
+          Неверное имя пользователя и пароль
         </div>
         <button
           type="button"
@@ -214,7 +214,7 @@
           aria-label="Close"
           onclick="closeToast('toast-danger')"
         >
-          <span class="sr-only">Close</span>
+          <span class="sr-only">Закрывать</span>
           <svg
             class="w-3 h-3"
             aria-hidden="true"
