--- a/server/app/templates/register.html
+++ b/server/app/templates/register.html
@@ -50,21 +50,21 @@
             <h1
               class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white"
             >
-              Create and account
+            Создание и учетная запись
             </h1>
             <div class="space-y-4 md:space-y-6">
               <div>
                 <label
                   for="email"
                   class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
-                  >Your email</label
+                  >Ваш адрес электронной почты</label
                 >
                 <input
                   type="email"
                   name="email"
                   id="email"
                   class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                  placeholder="name@company.com"
+                  placeholder="name@mail.ru"
                   required=""
                 />
               </div>
@@ -82,11 +82,11 @@
                   <label
                     for="terms"
                     class="font-light text-gray-500 dark:text-gray-300"
-                    >I accept the
+                    >Я принимаю
                     <a
                       class="font-medium text-primary-600 hover:underline dark:text-primary-500"
                       href="#"
-                      >Terms and Conditions</a
+                      >условия и положения</a
                     ></label
                   >
                 </div>
@@ -96,14 +96,14 @@
                 id="submit"
                 class="w-full text-white bg-primary-600 hover:bg-primary-700 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800"
               >
-                Create an account
+              Создать учетную запись
               </button>
               <p class="text-sm font-light text-gray-500 dark:text-gray-400">
-                Already have an account?
+                У вас уже есть учетная запись?
                 <a
                   href="login"
                   class="font-medium text-primary-600 hover:underline dark:text-primary-500"
-                  >Login here</a
+                  >Войдите в систему здесь</a
                 >
               </p>
             </div>
@@ -134,7 +134,7 @@
                 d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5Zm3.707 8.207-4 4a1 1 0 0 1-1.414 0l-2-2a1 1 0 0 1 1.414-1.414L9 10.586l3.293-3.293a1 1 0 0 1 1.414 1.414Z"
               />
             </svg>
-            <span class="sr-only">Check icon</span>
+            <span class="sr-only">Значок проверки</span>
           </div>
           <div class="ms-3 text-sm font-normal" id="toast-success-text"></div>
           <button
@@ -144,7 +144,7 @@
             aria-label="Close"
             onclick="closeToast('toast-success')"
           >
-            <span class="sr-only">Close</span>
+            <span class="sr-only">Закрывать</span>
             <svg
               class="w-3 h-3"
               aria-hidden="true"
@@ -182,7 +182,7 @@
                 d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5Zm3.707 11.793a1 1 0 1 1-1.414 1.414L10 11.414l-2.293 2.293a1 1 0 0 1-1.414-1.414L8.586 10 6.293 7.707a1 1 0 0 1 1.414-1.414L10 8.586l2.293-2.293a1 1 0 0 1 1.414 1.414L11.414 10l2.293 2.293Z"
               />
             </svg>
-            <span class="sr-only">Error icon</span>
+            <span class="sr-only">Значок ошибки</span>
           </div>
           <div class="ms-3 text-sm font-normal" id="toast-danger-text">
             
@@ -194,7 +194,7 @@
             aria-label="Close"
             onclick="closeToast('toast-danger')"
           >
-            <span class="sr-only">Close</span>
+            <span class="sr-only">Закрывать</span>
             <svg
               class="w-3 h-3"
               aria-hidden="true"
