feat: more translate

--- a/server/app/templates/emails/temporary-password.html
+++ b/server/app/templates/emails/temporary-password.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Your Temporary Password</title>
+  <title>Ваш временный пароль</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -50,24 +50,24 @@
 </head>
 <body>
   <div class="content">
-    <h1>Hi {{email}},</h1>
-    <p>You recently registered to our service. Here is your temporary password:</p>
+    <h1>Привет {{email}},</h1>
+    <p>Вы недавно зарегистрировались на нашем сервисе. Вот ваш временный пароль:</p>
     <div class="center">
       <!-- Display the temporary password here. Ensure it's selectable for easy copy. -->
       <div class="password-container">
         <code>{{temporary_password}}</code>
       </div>
     </div>
-    <p>Please go to the login page and fill up your other information!</p>
+    <p>Пожалуйста, перейдите на страницу входа в систему и заполните другую вашу информацию!</p>
     <div class="center">
       <a href="{{login_url}}" class="button" target="_blank">Login</a>
     </div>
     <!-- The login URL should be dynamically replaced -->
-    <p>If you did not request a password reset, please ignore this email or contact support if you have questions.</p>
-    <p>Thanks,<br>The Fitness Tracker Team</p>
+    <p>Если вы не запрашивали сброс пароля, пожалуйста, проигнорируйте это электронное письмо или обратитесь в службу поддержки, если у вас возникнут вопросы.</p>
+    <p>Спасибо,<br>Команда фитнес-трекеров</p>
   </div>
   <div class="footer">
-    Fitness Tracker
+    Фитнес-трекер
   </div>
 </body>
 </html>
