--- a/server/app/templates/login.html
+++ b/server/app/templates/login.html
@@ -102,7 +102,7 @@
                     <label
                       for="remember"
                       class="text-gray-500 dark:text-gray-300"
-                      >Помни меня</label
+                      > Запомнить меня</label
                     >
                   </div>
                 </div>
@@ -114,7 +114,7 @@
                 id="submit"
                 class="w-full text-white bg-primary-600 hover:bg-primary-700 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800"
               >
-                Sign in
+              Войти
               </button>
               <p class="text-sm font-light text-gray-500 dark:text-gray-400">
                 У вас еще нет учетной записи?
