--- a/server/app/templates/profile.html
+++ b/server/app/templates/profile.html
@@ -62,7 +62,7 @@
 
       <label for="gender">Пол: </label>
       <select name="gender" id="gender">
-        <option value="male">Самец</option>
+        <option value="male">Мужской</option>
         <option value="female">Женский</option>
         <option value="other">Другой</option>
       </select> <br>
@@ -81,7 +81,7 @@
       </select> <br>
     </form>
 
-    <button>Save</button>
+    <button>Сохранить</button>
 
     <script>
       let user = new Store("user");
