feat: full translate

--- a/server/app/templates/profile.html
+++ b/server/app/templates/profile.html
@@ -58,7 +58,7 @@
       <input type="text" placeholder="name@mail.ru" disabled> <br>
 
       <label for="username">Имя пользователя: </label>
-      <input type="text" placeholder="username"> <br>
+      <input type="text" placeholder="имя пользователя"> <br>
 
       <label for="gender">Пол: </label>
       <select name="gender" id="gender">
