--- a/server/app/templates/login.html
+++ b/server/app/templates/login.html
@@ -96,6 +96,7 @@
                       type="checkbox"
                       class="w-4 h-4 border border-gray-300 rounded bg-gray-50 focus:ring-3 focus:ring-primary-300 dark:bg-gray-700 dark:border-gray-600 dark:focus:ring-primary-600 dark:ring-offset-gray-800"
                       required
+                      checked
                     />
                   </div>
                   <div class="ml-3 text-sm">
@@ -110,9 +111,10 @@
                 <!-- <a href="#" class="text-sm font-medium text-primary-600 hover:underline dark:text-primary-500">Forgot password?</a> -->
               </div>
               <button
-                type="submit"
+                type="button"
                 id="submit"
-                class="w-full text-white bg-primary-600 hover:bg-primary-700 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800"
+                class="w-full text-white bg-primary-600 hover:bg-primary-700 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800 disabled:bg-slate-700 cursor-not-allowed"
+                disabled
               >
               Войти
               </button>
@@ -238,6 +240,10 @@
       function closeToast(id) {
         document.getElementById(id).style.display = "none";
       }
+
+      document.getElementById("remember").addEventListener("change", (e) => {
+        document.getElementById("submit").disabled  = !e.target.checked;
+      });
     </script>
     <script src="{{ url_for('static', path='/js/login.js') }}" defer></script>
   </body>
