--- a/server/app/templates/login.html
+++ b/server/app/templates/login.html
@@ -113,8 +113,7 @@
               <button
                 type="button"
                 id="submit"
-                class="w-full text-white bg-primary-600 hover:bg-primary-700 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800 disabled:bg-slate-700 cursor-not-allowed"
-                disabled
+                class="w-full text-white bg-primary-600 hover:bg-primary-700 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800 disabled:bg-slate-700 disabled:opacity-50 disabled:cursor-not-allowed disabled:text-gray-400"
               >
               Войти
               </button>
@@ -240,10 +239,6 @@
       function closeToast(id) {
         document.getElementById(id).style.display = "none";
       }
-
-      document.getElementById("remember").addEventListener("change", (e) => {
-        document.getElementById("submit").disabled  = !e.target.checked;
-      });
     </script>
     <script src="{{ url_for('static', path='/js/login.js') }}" defer></script>
   </body>
