--- a/server/app/templates/profile.html
+++ b/server/app/templates/profile.html
@@ -19,81 +19,400 @@
   <body>
     <script>
       (async () => {
+        await authFlow(null);
+      })();
+    </script>
+
+    <main>
+      <nav class="bg-white border-gray-200 dark:bg-gray-900">
+        <div
+          class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4"
+        >
+          <a href="/" class="flex items-center space-x-3 rtl:space-x-reverse">
+            <img
+              src="https://em-content.zobj.net/source/apple/76/flexed-biceps_1f4aa.png"
+              class="h-8"
+              alt="Logo"
+            />
+            <span
+              class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white"
+              >Fitness Tracker</span
+            >
+          </a>
+          <div
+            class="flex items-center md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse relative text-left"
+          >
+            <button
+              type="button"
+              class="flex text-sm bg-gray-800 rounded-full md:me-0 focus:ring-gray-300 dark:focus:ring-gray-600"
+              id="user-menu-button"
+              aria-expanded="false"
+              data-dropdown-toggle="user-dropdown"
+              data-dropdown-placement="bottom"
+            >
+              <span class="sr-only">Open user menu</span>
+              <img
+                class="w-8 h-8 rounded-full"
+                src="https://st.depositphotos.com/1537427/3571/v/450/depositphotos_35717211-stock-illustration-vector-user-icon.jpg"
+                alt="profile"
+              />
+            </button>
+            <!-- Dropdown menu -->
+            <button
+              data-collapse-toggle="navbar-user"
+              type="button"
+              class="flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
+              aria-controls="navbar-user"
+              aria-expanded="false"
+            >
+              <span class="sr-only">Open main menu</span>
+              <svg
+                class="w-5 h-5"
+                aria-hidden="true"
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 17 14"
+              >
+                <path
+                  stroke="currentColor"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M1 1h15M1 7h15M1 13h15"
+                />
+              </svg>
+            </button>
+            <div
+              class="relative z-50 hidden my-4 text-base list-none bg-white divide-y divide-gray-100 rounded-lg shadow dark:bg-gray-700 dark:divide-gray-600"
+              id="user-dropdown"
+            >
+              <div class="px-4 py-3">
+                <span
+                  class="block text-sm text-gray-900 dark:text-white"
+                  id="menu-username"
+                ></span>
+                <span
+                  class="block text-sm text-gray-500 truncate dark:text-gray-400"
+                  id="menu-email"
+                ></span>
+              </div>
+              <ul class="py-2" aria-labelledby="user-menu-button">
+                <li>
+                  <a
+                    href="#"
+                    class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white"
+                    id="logout"
+                    >Sign out</a
+                  >
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </nav>
+
+      <div class="flex flex-row items-center justify-center">
+        <form class="w-[80%]" id="form">
+          <div class="grid gap-6 mb-6 md:grid-cols-2">
+            <div>
+              <label
+                for="email"
+                class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+                >Email</label
+              >
+              <input
+                type="text"
+                id="email"
+                name="email"
+                aria-label="disabled input"
+                class="bg-gray-100 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 cursor-not-allowed dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-gray-400 dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                value=""
+                disabled
+                readonly
+              />
+            </div>
+            <div>
+              <label
+                for="username"
+                class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+                >Username</label
+              >
+              <input
+                type="text"
+                id="username"
+                name="username"
+                class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                value=""
+                required
+              />
+            </div>
+            <div>
+              <label
+                for="gender"
+                class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+                >Gender</label
+              >
+              <select
+                id="gender"
+                name="gender"
+                class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+              >
+                <option selected>Choose</option>
+                <option value="male">Male</option>
+                <option value="female" selected>Female</option>
+                <option value="others">Others</option>
+              </select>
+            </div>
+            <div>
+              <label
+                for="height"
+                class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+                >Height</label
+              >
+              <input
+                type="number"
+                id="height"
+                name="height"
+                class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                value=""
+                required
+              />
+            </div>
+            <div>
+              <label
+                for="weight"
+                class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+                >Weight</label
+              >
+              <input
+                type="number"
+                id="weight"
+                name="weight"
+                class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                placeholder=""
+                required
+              />
+            </div>
+            <div>
+              <label
+                for="activity-level"
+                class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+                >Activity Level</label
+              >
+
+              <select
+                id="activity-level"
+                name="activity_level"
+                class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+              >
+                <option selected>Choose</option>
+                <option value="1">Not Much</option>
+                <option value="2">Moderately Active (1-3) per week</option>
+                <option value="3">Very Active (3-5) per week</option>
+              </select>
+            </div>
+          </div>
+          <!-- For thee future -->
+          <!-- <div class="mb-6">
+            <label
+              for="password"
+              class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+              >Password</label
+            >
+            <input
+              type="password"
+              id="password"
+              class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+              placeholder="•••••••••"
+              required
+            />
+          </div>
+          <div class="mb-6">
+            <label
+              for="confirm_password"
+              class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+              >Confirm password</label
+            >
+            <input
+              type="password"
+              id="confirm_password"
+              class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+              placeholder="•••••••••"
+              required
+            />
+          </div> -->
+          <button
+            type="submit"
+            class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
+          >
+            Submit
+          </button>
+        </form>
+      </div>
+
+      <section id="toasts">
+        <div
+          id="toast-success"
+          class="fixed top-5 right-5 flex items-center w-full max-w-xs p-4 mb-4 text-gray-500 bg-white rounded-lg shadow dark:text-gray-400 dark:bg-gray-800"
+          role="alert"
+          style="display: none"
+        >
+          <div
+            class="inline-flex items-center justify-center flex-shrink-0 w-8 h-8 text-green-500 bg-green-100 rounded-lg dark:bg-green-800 dark:text-green-200"
+          >
+            <svg
+              class="w-5 h-5"
+              aria-hidden="true"
+              xmlns="http://www.w3.org/2000/svg"
+              fill="currentColor"
+              viewBox="0 0 20 20"
+            >
+              <path
+                d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5Zm3.707 8.207-4 4a1 1 0 0 1-1.414 0l-2-2a1 1 0 0 1 1.414-1.414L9 10.586l3.293-3.293a1 1 0 0 1 1.414 1.414Z"
+              />
+            </svg>
+            <span class="sr-only">Значок проверки</span>
+          </div>
+          <div class="ms-3 text-sm font-normal" id="toast-success-text"></div>
+          <button
+            type="button"
+            class="ms-auto -mx-1.5 -my-1.5 bg-white text-gray-400 hover:text-gray-900 rounded-lg focus:ring-2 focus:ring-gray-300 p-1.5 hover:bg-gray-100 inline-flex items-center justify-center h-8 w-8 dark:text-gray-500 dark:hover:text-white dark:bg-gray-800 dark:hover:bg-gray-700"
+            data-dismiss-target="#toast-success"
+            aria-label="Close"
+            onclick="closeToast('toast-success')"
+          >
+            <span class="sr-only">Закрывать</span>
+            <svg
+              class="w-3 h-3"
+              aria-hidden="true"
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 14 14"
+            >
+              <path
+                stroke="currentColor"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"
+              />
+            </svg>
+          </button>
+        </div>
+        <div
+          id="toast-danger"
+          class="fixed top-5 right-5 flex items-center w-full max-w-xs p-4 mb-4 text-gray-500 bg-white rounded-lg shadow dark:text-gray-400 dark:bg-gray-800"
+          role="alert"
+          style="display: none"
+        >
+          <div
+            class="inline-flex items-center justify-center flex-shrink-0 w-8 h-8 text-red-500 bg-red-100 rounded-lg dark:bg-red-800 dark:text-red-200"
+          >
+            <svg
+              class="w-5 h-5"
+              aria-hidden="true"
+              xmlns="http://www.w3.org/2000/svg"
+              fill="currentColor"
+              viewBox="0 0 20 20"
+            >
+              <path
+                d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5Zm3.707 11.793a1 1 0 1 1-1.414 1.414L10 11.414l-2.293 2.293a1 1 0 0 1-1.414-1.414L8.586 10 6.293 7.707a1 1 0 0 1 1.414-1.414L10 8.586l2.293-2.293a1 1 0 0 1 1.414 1.414L11.414 10l2.293 2.293Z"
+              />
+            </svg>
+            <span class="sr-only">Значок ошибки</span>
+          </div>
+          <div class="ms-3 text-sm font-normal" id="toast-danger-text"></div>
+          <button
+            type="button"
+            class="ms-auto -mx-1.5 -my-1.5 bg-white text-gray-400 hover:text-gray-900 rounded-lg focus:ring-2 focus:ring-gray-300 p-1.5 hover:bg-gray-100 inline-flex items-center justify-center h-8 w-8 dark:text-gray-500 dark:hover:text-white dark:bg-gray-800 dark:hover:bg-gray-700"
+            data-dismiss-target="#toast-danger"
+            aria-label="Close"
+            onclick="closeToast('toast-danger')"
+          >
+            <span class="sr-only">Закрывать</span>
+            <svg
+              class="w-3 h-3"
+              aria-hidden="true"
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 14 14"
+            >
+              <path
+                stroke="currentColor"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"
+              />
+            </svg>
+          </button>
+        </div>
+      </section>
+    </main>
+
+    <script>
+      (async () => {
         let accessToken = localStorage.getItem("access_token");
-        let refreshToken = localStorage.getItem("refresh_token");
-        if (accessToken && refreshToken) {
-          let isValid = await verifyJwtToken(accessToken);
-          console.log(`Access token is: ${isValid ? "valid" : "invalid"}`);
-
-          if (!isValid) {
-            let { access_token, refresh_token } = await refreshJwtToken(
-              refreshToken
-            );
-
-            if (access_token && refresh_token) {
-              localStorage.setItem("access_token", access_token);
-              localStorage.setItem("refresh_token", refresh_token);
-            } else {
-              console.log("Invalid refresh token.");
-              window.location.href = "/login";
-            }
-          }
-        } else {
-          window.location.href = "/login";
-        }
-
-        let {res, data} = await getUser(accessToken);
-        console.log(res, data);
+        let { res, data } = await getUser(accessToken);
         if (res.status === 401) {
           window.location.href = "/login";
         }
+        document.getElementById("email").value = data.email;
+        document.getElementById("username").value = data.username ?? "";
+        document.getElementById("menu-username").innerText =
+          data.username ?? "";
+        document.getElementById("menu-email").innerText = data.email;
 
+        let genderTag = document.getElementById("gender");
+        let genders = [...genderTag.options].map((o) => o.text);
+        let gender = data.gender ?? "";
+        if (gender !== "" && genders.includes(data.gender.toLowerCase())) {
+          genderTag.value = gender;
+        }
+
+        document.getElementById("height").value = data.height ?? 0;
+        document.getElementById("weight").value = data.weight ?? 0;
+
+        let activityLevelTag = document.getElementById("activity-level");
+        let activityLevels = [...activityLevelTag.options].map((o) =>
+          parseInt(o.value)
+        );
+        let activityLevel = data.activity_level ?? 0;
+        if (
+          activityLevel != 0 &&
+          activityLevels.includes(data.activity_level)
+        ) {
+          activityLevelTag.value = activityLevel;
+        }
       })();
-    </script> 
-    Ваш профиль
-    <div id="user-data"></div>
 
-    <form action="">
-      <label for="email">Электронная почта: </label>
-      <input type="text" placeholder="name@mail.ru" disabled> <br>
+      const userMenuButton = document.getElementById("user-menu-button");
+      const userDropdown = document.getElementById("user-dropdown");
 
-      <label for="username">Имя пользователя: </label>
-      <input type="text" placeholder="имя пользователя"> <br>
+      userMenuButton.addEventListener("click", function () {
+        userDropdown.classList.toggle("hidden");
+      });
 
-      <label for="gender">Пол: </label>
-      <select name="gender" id="gender">
-        <option value="male">Мужской</option>
-        <option value="female">Женский</option>
-        <option value="other">Другой</option>
-      </select> <br>
-
-      <label for="height">Высота: </label>
-      <input type="text" placeholder="высота в см"> <br>
-
-      <label for="weight">Вес: </label>
-      <input type="text" placeholder="масса в кг"> <br>
-
-      <label for="activity">Активность: </label>
-      <select name="activity" id="activity">
-        <option value="lightly-active">Слегка активен</option>
-        <option value="moderately-active">Умеренно активный</option>
-        <option value="very-active">Очень активный</option>
-      </select> <br>
-    </form>
-
-    <button>Сохранить</button>
-
-    <button id="logout">выход из системы</button>
-
-    <script>
-      let user = new Store("user");
-      document.getElementById("user-data").innerHTML = JSON.stringify(user.state, null, 2);
+      window.addEventListener("click", function (e) {
+        if (
+          !userMenuButton.contains(e.target) &&
+          !userDropdown.contains(e.target)
+        ) {
+          userDropdown.classList.add("hidden");
+        }
+      });
 
       document.getElementById("logout").addEventListener("click", () => {
         localStorage.removeItem("access_token");
         localStorage.removeItem("refresh_token");
         window.location.href = "/login";
       });
+
+      function closeToast(id) {
+        document.getElementById(id).style.display = "none";
+      }
     </script>
+
+    <script src="{{ url_for('static', path='/js/profile.js') }}" defer></script>
   </body>
 </html>
