--- a/server/app/templates/register.html
+++ b/server/app/templates/register.html
@@ -76,6 +76,7 @@
                     type="checkbox"
                     class="w-4 h-4 border border-gray-300 rounded bg-gray-50 focus:ring-3 focus:ring-primary-300 dark:bg-gray-700 dark:border-gray-600 dark:focus:ring-primary-600 dark:ring-offset-gray-800"
                     required=""
+                    checked
                   />
                 </div>
                 <div class="ml-3 text-sm">
@@ -94,7 +95,7 @@
               <button
                 type="submit"
                 id="submit"
-                class="w-full text-white bg-primary-600 hover:bg-primary-700 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800"
+                class="w-full disabled:bg-slate-700 disabled:opacity-50 disabled:cursor-not-allowed disabled:text-gray-400 text-white bg-primary-600 hover:bg-primary-700 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800"
               >
               Создать учетную запись
               </button>
@@ -212,12 +213,17 @@
             </svg>
           </button>
         </div>
-      </section>
+    </section>
 
-      <script>
+      <script defer>
         function closeToast(id) {
           document.getElementById(id).style.display = "none";
         }
+
+        document.getElementById("terms").addEventListener("change", function (e) {
+          console.log(e.target.checked);
+          document.getElementById("submit").disabled = !e.target.checked;
+        });
       </script>
       <script src="{{ url_for('static', path='/js/register.js') }}" defer></script>
   </body>
