--- a/server/app/templates/emails/temporary-password.html
+++ b/server/app/templates/emails/temporary-password.html
@@ -60,7 +60,7 @@
     </div>
     <p>Пожалуйста, перейдите на страницу входа в систему и заполните другую вашу информацию!</p>
     <div class="center">
-      <a href="{{login_url}}" class="button" target="_blank">Login</a>
+      <a href="{{login_url}}" class="button" target="_blank">Авторизоваться</a>
     </div>
     <!-- The login URL should be dynamically replaced -->
     <p>Если вы не запрашивали сброс пароля, пожалуйста, проигнорируйте это электронное письмо или обратитесь в службу поддержки, если у вас возникнут вопросы.</p>
