--- a/server/app/static/css/main.css
+++ b/server/app/static/css/main.css
@@ -1611,6 +1611,11 @@ video {
     line-height: 2rem;
   }
 
+  .md\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+
   .md\:text-blue-700 {
     --tw-text-opacity: 1;
     color: rgb(29 78 216 / var(--tw-text-opacity));
