--- a/server/app/templates/emails/temporary-password.html
+++ b/server/app/templates/emails/temporary-password.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -53,7 +53,6 @@
     <h1>Привет {{email}},</h1>
     <p>Вы недавно зарегистрировались на нашем сервисе. Вот ваш временный пароль:</p>
     <div class="center">
-      <!-- Display the temporary password here. Ensure it's selectable for easy copy. -->
       <div class="password-container">
         <code>{{temporary_password}}</code>
       </div>
@@ -62,7 +61,6 @@
     <div class="center">
       <a href="{{login_url}}" class="button" target="_blank">Авторизоваться</a>
     </div>
-    <!-- The login URL should be dynamically replaced -->
     <p>Если вы не запрашивали сброс пароля, пожалуйста, проигнорируйте это электронное письмо или обратитесь в службу поддержки, если у вас возникнут вопросы.</p>
     <p>Спасибо,<br>Команда фитнес-трекеров</p>
   </div>
