--- a/server/app/templates/dashboard.html
+++ b/server/app/templates/dashboard.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dashboard | Fitness Tracker</title>
+    <title>Панель мониторинга | Фитнес-трекер</title>
     <link
       rel="shortcut icon"
       href="{{ url_for('static', path='favicon.ico') }}"
@@ -37,11 +37,11 @@
           <img
             src="https://em-content.zobj.net/source/apple/76/flexed-biceps_1f4aa.png"
             class="h-8 me-3"
-            alt="Logo"
+            alt="Логотип"
           />
           <span
             class="self-center text-xl font-semibold sm:text-2xl whitespace-nowrap dark:text-white"
-            >Fitness Tracker
+            >Фитнес-трекер
           </span>
         </a>
 
@@ -52,7 +52,7 @@
             id="logout"
             class="text-white bg-red-600 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 font-medium rounded-lg text-sm px-4 py-2 text-center dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-800"
           >
-            Logout
+              выход из системы
           </button>
           <button
             data-collapse-toggle="navbar-sticky"
@@ -61,7 +61,7 @@
             aria-controls="navbar-sticky"
             aria-expanded="false"
           >
-            <span class="sr-only">Open main menu</span>
+            <span class="sr-only">Открыть главное меню</span>
             <svg
               class="w-5 h-5"
               aria-hidden="true"
@@ -92,20 +92,20 @@
                 href="#"
                 class="block py-2 px-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 md:dark:text-blue-500"
                 aria-current="page"
-                >Dashboard</a
+                >Приборная панель</a
               >
             </li>
             <li>
               <a
                 href="/profile"
                 class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700"
-                >Profile</a
+                >Профиль</a
               >
             <li>
               <a
                 href="/workouts/new"
                 class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700"
-                >New Workouts</a
+                >Новая тренировка</a
               >
             </li>
           </ul>
@@ -122,7 +122,7 @@
             type="button"
             class="inline-flex items-center p-2 text-sm text-gray-500 rounded-lg sm:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
           >
-            <span class="sr-only">Open sidebar</span>
+            <span class="sr-only">Открыть боковую панель</span>
             <svg
               class="w-6 h-6"
               aria-hidden="true"
@@ -155,7 +155,7 @@
                   <h4
                     class="mb-2 text-xl font-bold tracking-tight text-gray-900 dark:text-white"
                   >
-                    Jumping Jacks
+                    Прыгающие домкраты
                   </h4>
                   <p class="font-normal text-gray-700 dark:text-gray-400"></p>
                 </button>
@@ -168,7 +168,7 @@
                   <h4
                     class="mb-2 text-xl font-bold tracking-tight text-gray-900 dark:text-white"
                   >
-                    High Knees
+                    Высокие колени
                   </h4>
                   <p class="font-normal text-gray-700 dark:text-gray-400"></p>
                 </button>
@@ -205,9 +205,9 @@
           <div
             class="p-4 border-2 border-gray-200 border-dashed rounded-lg dark:border-gray-700"
           >
-            <div>Exercise: <span id="current">Jumping Jacks</span></div>
-            <div>Timer: <span id="timer">0:00</span></div>
-            <div>Repetitions: <span id="repetition-count">0</span></div>
+            <div>Упражнение: <span id="current">Прыгающие домкраты</span></div>
+            <div>Таймер: <span id="timer">0:00</span></div>
+            <div>Повторения: <span id="repetition-count">0</span></div>
             <video id="video" class="w-[65%] h-full" playsinline autoplay></video>
           </div>
         </div>
@@ -257,7 +257,6 @@
         }${seconds}`;
       }
 
-      // Получаем доступ к медиа устройству
       if (navigator.mediaDevices.getUserMedia) {
         navigator.mediaDevices
           .getUserMedia({ video: true })
@@ -273,7 +272,7 @@
         const arrayBuffer = event.data;
         const blob = new Blob([arrayBuffer], { type: "image/jpeg" });
         receivedImg.src = URL.createObjectURL(blob);
-        repetitionsCountElement.innerText = event.data; // Обновляем значение на странице
+        repetitionsCountElement.innerText = event.data;
       };
 
       video.addEventListener("play", () => {
