--- a/server/app/templates/new-workouts.html
+++ b/server/app/templates/new-workouts.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>New Workouts | Fitness Tracker</title>
+    <title>Новый трекер тренировок | фитнеса</title>
     <link
       rel="shortcut icon"
       href="{{ url_for('static', path='favicon.ico') }}"
@@ -35,11 +35,11 @@
           <img
             src="https://em-content.zobj.net/source/apple/76/flexed-biceps_1f4aa.png"
             class="h-8 me-3"
-            alt="Logo"
+            alt="Логотип"
           />
           <span
             class="self-center text-xl font-semibold sm:text-2xl whitespace-nowrap dark:text-white"
-            >Fitness Tracker
+            >Фитнес-трекер
           </span>
         </a>
 
@@ -50,7 +50,7 @@
             id="logout"
             class="text-white bg-red-600 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 font-medium rounded-lg text-sm px-4 py-2 text-center dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-800"
           >
-            Logout
+          Выход из системы
           </button>
           <button
             data-collapse-toggle="navbar-sticky"
@@ -59,7 +59,7 @@
             aria-controls="navbar-sticky"
             aria-expanded="false"
           >
-            <span class="sr-only">Open main menu</span>
+            <span class="sr-only">Открыть главное меню</span>
             <svg
               class="w-5 h-5"
               aria-hidden="true"
@@ -90,21 +90,21 @@
                 href="/dashboard"
                 class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700"
                 aria-current="page"
-                >Dashboard</a
+                >Приборная панель</a
               >
             </li>
             <li>
               <a
                 href="/profile"
                 class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700"
-                >Profile</a
+                >Профиль</a
               >
             </li>
             <li>
               <a
                 href="#"
                 class="block py-2 px-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 md:dark:text-blue-500"
-                >New Workouts</a
+                >Новая тренировка</a
               >
             </li>
           </ul>
@@ -127,7 +127,7 @@
               class="flex justify-between items-center pb-4 mb-4 rounded-t border-b sm:mb-5 dark:border-gray-600"
             >
               <h3 class="text-lg font-semibold text-gray-900 dark:text-white">
-                Add Workout
+                Добавить тренировку
               </h3>
             </div>
             <!-- Modal body -->
@@ -137,14 +137,14 @@
                   <label
                     for="name"
                     class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
-                    >Name</label
+                    >Имя</label
                   >
                   <input
                     type="text"
                     name="name"
                     id="name"
                     class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
-                    placeholder="Workout name"
+                    placeholder="Название тренировки"
                     required=""
                   />
                 </div>
@@ -152,22 +152,22 @@
                   <label
                     for="type"
                     class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
-                    >Type</label
+                    >Тип</label
                   >
                   <select
                     id="type"
                     class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
                   >
-                    <option selected="jumping-jack-id">Select</option>
-                    <option value="jumping-jack-id">Jumping Jacks</option>
-                    <option value="high-knees-id">High Knees</option>
+                    <option selected="jumping-jack-id">Выбрать</option>
+                    <option value="jumping-jack-id">Прыгающие домкраты</option>
+                    <option value="high-knees-id">Высокие колени</option>
                   </select>
                 </div>
                 <div>
                   <label
                     for="timeout"
                     class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
-                    >Timeout in sec</label
+                    >Тайм-аут в секундах</label
                   >
                   <input
                     type="number"
@@ -183,7 +183,7 @@
                   <label
                     for="rest-timeout"
                     class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
-                    >Rest Timeout in sec</label
+                    >Время отдыха в секундах</label
                   >
                   <input
                     type="number"
@@ -197,7 +197,7 @@
                 </div>
                 <div class="col-span-2">
                   <label
-                    for="description"
+                    for="Описание"
                     class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
                     >Description</label
                   >
@@ -205,7 +205,7 @@
                     id="description"
                     rows="4"
                     class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-primary-500 focus:border-primary-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
-                    placeholder="More info about exercise."
+                    placeholder="Более подробная информация об упражнениях."
                   ></textarea>
                 </div>
               </div>
