--- a/server/app/templates/profile.html
+++ b/server/app/templates/profile.html
@@ -15,6 +15,10 @@
     />
     <script src="{{ url_for('static', path='/js/lib.js') }}"></script>
     <script src="{{ url_for('static', path='/js/store.js') }}"></script>
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.css"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <script>
@@ -37,11 +41,11 @@
           <img
             src="https://em-content.zobj.net/source/apple/76/flexed-biceps_1f4aa.png"
             class="h-8"
-            alt="Logo"
+            alt="Логотип"
           />
           <span
             class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white"
-            >Fitness Tracker</span
+            >Фитнес-трекер</span
           >
         </a>
         <div class="flex md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
@@ -50,7 +54,7 @@
             id="logout"
             class="text-white bg-red-600 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 font-medium rounded-lg text-sm px-4 py-2 text-center dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-800"
           >
-            Logout
+            Выход из системы
           </button>
           <button
             data-collapse-toggle="navbar-sticky"
@@ -59,7 +63,7 @@
             aria-controls="navbar-sticky"
             aria-expanded="false"
           >
-            <span class="sr-only">Open main menu</span>
+            <span class="sr-only">Открыть главное меню</span>
             <svg
               class="w-5 h-5"
               aria-hidden="true"
@@ -88,7 +92,7 @@
               <a
                 href="/dashboard"
                 class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700"
-                >Dashboard</a
+                >Приборная панель</a
               >
             </li>
             <li>
@@ -96,14 +100,14 @@
                 href="#"
                 class="block py-2 px-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 md:dark:text-blue-500"
                 aria-current="page"
-                >Profile</a
+                >Профиль</a
               >
             </li>
             <li>
               <a
                 href="/workouts/new"
                 class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700"
-                >New Workouts</a
+                >Новая тренировка</a
               >
             </li>
           </ul>
@@ -118,7 +122,7 @@
               <label
                 for="email"
                 class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
-                >Email</label
+                >Электронная почта</label
               >
               <input
                 type="text"
@@ -135,7 +139,7 @@
               <label
                 for="username"
                 class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
-                >Username</label
+                >Имя пользователя</label
               >
               <input
                 type="text"
@@ -150,24 +154,24 @@
               <label
                 for="gender"
                 class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
-                >Gender</label
+                >Пол</label
               >
               <select
                 id="gender"
                 name="gender"
                 class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
               >
-                <option selected>Choose</option>
-                <option value="male">Male</option>
-                <option value="female" selected>Female</option>
-                <option value="others">Others</option>
+                <option selected>Выбирать</option>
+                <option value="male">Самец</option>
+                <option value="female" selected>Женский</option>
+                <option value="others">Другие</option>
               </select>
             </div>
             <div>
               <label
                 for="height"
                 class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
-                >Height</label
+                >Высота (cm)</label
               >
               <input
                 type="number"
@@ -182,7 +186,7 @@
               <label
                 for="weight"
                 class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
-                >Weight</label
+                >Вес (kg)</label
               >
               <input
                 type="number"
@@ -197,7 +201,7 @@
               <label
                 for="activity-level"
                 class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
-                >Activity Level</label
+                >Уровень активности</label
               >
 
               <select
@@ -205,47 +209,18 @@
                 name="activity_level"
                 class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
               >
-                <option selected>Choose</option>
-                <option value="1">Not Much</option>
-                <option value="2">Moderately Active (1-3) per week</option>
-                <option value="3">Very Active (3-5) per week</option>
+                <option selected>Выбирать</option>
+                <option value="1">немного</option>
+                <option value="2">Умеренно активный (1-3 раза в неделю)</option>
+                <option value="3">Очень активный (3-5) раз в неделю</option>
               </select>
             </div>
           </div>
-          <!-- For thee future -->
-          <!-- <div class="mb-6">
-            <label
-              for="password"
-              class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
-              >Password</label
-            >
-            <input
-              type="password"
-              id="password"
-              class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-              placeholder="•••••••••"
-              required
-            />
-          </div>
-          <div class="mb-6">
-            <label
-              for="confirm_password"
-              class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
-              >Confirm password</label
-            >
-            <input
-              type="password"
-              id="confirm_password"
-              class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-              placeholder="•••••••••"
-              required
-            />
-          </div> -->
           <button
             type="submit"
             class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
           >
-            Submit
+          Представить
           </button>
         </form>
       </div>
@@ -271,7 +246,7 @@
                 d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5Zm3.707 8.207-4 4a1 1 0 0 1-1.414 0l-2-2a1 1 0 0 1 1.414-1.414L9 10.586l3.293-3.293a1 1 0 0 1 1.414 1.414Z"
               />
             </svg>
-            <span class="sr-only">Значок проверки</span>
+            <span class="sr-only">Тревога</span>
           </div>
           <div class="ms-3 text-sm font-normal" id="toast-success-text"></div>
           <button
@@ -319,7 +294,7 @@
                 d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5Zm3.707 11.793a1 1 0 1 1-1.414 1.414L10 11.414l-2.293 2.293a1 1 0 0 1-1.414-1.414L8.586 10 6.293 7.707a1 1 0 0 1 1.414-1.414L10 8.586l2.293-2.293a1 1 0 0 1 1.414 1.414L11.414 10l2.293 2.293Z"
               />
             </svg>
-            <span class="sr-only">Значок ошибки</span>
+            <span class="sr-only">Тревога</span>
           </div>
           <div class="ms-3 text-sm font-normal" id="toast-danger-text"></div>
           <button
@@ -411,18 +386,6 @@
     </script>
 
     <script src="{{ url_for('static', path='/js/profile.js') }}" defer></script>
-
-    <script>
-      const menuButton = document.querySelector(
-        '[data-collapse-toggle="navbar-sticky"]'
-      );
-      const menu = document.getElementById("navbar-sticky");
-
-      menuButton.addEventListener("click", () => {
-        menu.classList.toggle("hidden");
-        const isExpanded = menuButton.getAttribute("aria-expanded") === "true";
-        menuButton.setAttribute("aria-expanded", !isExpanded);
-      });
-    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.js"></script>
   </body>
 </html>
