--- a/server/app/templates/register.html
+++ b/server/app/templates/register.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Register | Fitness Tracker</title>
+    <title>Регистрация | Фитнес-трекер</title>
     <link rel="shortcut icon" href="{{ url_for('static', path='favicon.ico') }}" type="image/x-icon">
     <link
       href="{{ url_for('static', path='/css/main.css') }}"
@@ -18,7 +18,6 @@
         let refreshToken = localStorage.getItem("refresh_token");
         if (accessToken && refreshToken) {
           let isValid = await verifyJwtToken(accessToken);
-          console.log(`Access token is: ${isValid ? "valid" : "invalid"}`);
 
           if (isValid) {
             window.location.href = "/dashboard";
