--- a/server/app/templates/new-workouts.html
+++ b/server/app/templates/new-workouts.html
@@ -6,15 +6,14 @@
     <title>Новый трекер тренировок | фитнеса</title>
     <link
       rel="shortcut icon"
-      href="{{ url_for('static', path='favicon.ico') }}"
+      href="../static/favicon.ico"
       type="image/x-icon"
     />
     <link
-      href="{{ url_for('static', path='/css/main.css') }}"
+      href="../static/css/main.css"
       rel="stylesheet"
     />
-    <script src="{{ url_for('static', path='/js/lib.js') }}"></script>
-    <script src="{{ url_for('static', path='/js/store.js') }}"></script>
+    <script src="../static/js/lib.js"></script>
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.css"
       rel="stylesheet"
@@ -131,7 +130,7 @@
               </h3>
             </div>
             <!-- Modal body -->
-            <form action="#">
+            <form id="form">
               <div class="grid gap-4 mb-4 sm:grid-cols-2">
                 <div>
                   <label
@@ -156,23 +155,21 @@
                   >
                   <select
                     id="type"
+                    name="exercise_id"
                     class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
                   >
-                    <option selected="jumping-jack-id">Выбрать</option>
-                    <option value="jumping-jack-id">Прыгающие домкраты</option>
-                    <option value="high-knees-id">Высокие колени</option>
                   </select>
                 </div>
                 <div>
                   <label
-                    for="timeout"
+                    for="total-time"
                     class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
                     >Тайм-аут в секундах</label
                   >
                   <input
                     type="number"
-                    name="timeout"
-                    id="timeout"
+                    name="total_time"
+                    id="total-time"
                     class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
                     placeholder="60"
                     required=""
@@ -181,14 +178,14 @@
                 </div>
                 <div>
                   <label
-                    for="rest-timeout"
+                    for="rest-time"
                     class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
                     >Время отдыха в секундах</label
                   >
                   <input
                     type="number"
-                    name="rest_timeout"
-                    id="rest-timeout"
+                    name="rest_time"
+                    id="rest-time"
                     class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
                     placeholder="10"
                     required=""
@@ -241,6 +238,15 @@
         if (res.status === 401) {
           window.location.href = "/login";
         }
+
+        const typeDropdown = document.getElementById("type");
+        data.exercises.forEach((exercise) => {
+          const option = document.createElement("option");
+          option.value = exercise.id;
+          option.textContent = exercise.name;
+          typeDropdown.appendChild(option);
+        });
+
       })();
 
       document.getElementById("logout").addEventListener("click", () => {
@@ -251,5 +257,6 @@
     </script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.js"></script>
+    <script src="../static/js/newWorkouts.js"></script>
   </body>
 </html>
