--- a/server/app/templates/profile.html
+++ b/server/app/templates/profile.html
@@ -6,15 +6,14 @@
     <title>Профиль | Фитнес-трекер</title>
     <link
       rel="shortcut icon"
-      href="{{ url_for('static', path='favicon.ico') }}"
+      href="../static/favicon.ico"
       type="image/x-icon"
     />
     <link
-      href="{{ url_for('static', path='/css/main.css') }}"
+      href="../static/css/main.css"
       rel="stylesheet"
     />
-    <script src="{{ url_for('static', path='/js/lib.js') }}"></script>
-    <script src="{{ url_for('static', path='/js/store.js') }}"></script>
+    <script src="../static/js/lib.js"></script>
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.css"
       rel="stylesheet"
@@ -386,7 +385,7 @@
       }
     </script>
 
-    <script src="{{ url_for('static', path='/js/profile.js') }}" defer></script>
+    <script src="../static/js/profile.js" defer></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.js"></script>
   </body>
 </html>
