--- a/server/app/templates/new-workouts.html
+++ b/server/app/templates/new-workouts.html
@@ -196,7 +196,7 @@
                   <label
                     for="Описание"
                     class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
-                    >Description</label
+                    >Описание</label
                   >
                   <textarea
                     id="description"
