--- a/server/app/templates/profile.html
+++ b/server/app/templates/profile.html
@@ -219,7 +219,7 @@
               <label
                 for="phone-number"
                 class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
-                >Phone</label
+                >Телефон</label
               >
               <input
                 type="number"
