--- a/server/app/templates/new-workouts.html
+++ b/server/app/templates/new-workouts.html
@@ -49,7 +49,7 @@
             id="logout"
             class="text-white bg-red-600 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 font-medium rounded-lg text-sm px-4 py-2 text-center dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-800"
           >
-          Выход из системы
+          Выход
           </button>
           <button
             data-collapse-toggle="navbar-sticky"
@@ -136,7 +136,8 @@
                   <label
                     for="name"
                     class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
-                    >Имя</label
+                    >Название тренировки
+                    </label
                   >
                   <input
                     type="text"
@@ -164,7 +165,7 @@
                   <label
                     for="total-time"
                     class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
-                    >Тайм-аут в секундах</label
+                    >Таймер в секундах</label
                   >
                   <input
                     type="number"
