--- a/server/app/templates/dashboard.html
+++ b/server/app/templates/dashboard.html
@@ -57,7 +57,7 @@
             id="logout"
             class="text-white bg-red-600 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 font-medium rounded-lg text-sm px-4 py-2 text-center dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-800"
           >
-            выход из системы
+            Выход
           </button>
           <button
             data-collapse-toggle="navbar-sticky"
