--- a/server/app/templates/profile.html
+++ b/server/app/templates/profile.html
@@ -53,7 +53,7 @@
             id="logout"
             class="text-white bg-red-600 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 font-medium rounded-lg text-sm px-4 py-2 text-center dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-800"
           >
-            Выход из системы
+            Выход
           </button>
           <button
             data-collapse-toggle="navbar-sticky"
@@ -238,7 +238,7 @@
             type="submit"
             class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
           >
-          Представить
+          Изменить
           </button>
         </form>
       </div>
