--- a/server/app/templates/dashboard.html
+++ b/server/app/templates/dashboard.html
@@ -320,7 +320,7 @@
                 </svg>
               </div>
               <h3 class="mb-2 text-xl font-bold dark:text-white">
-                Total Time
+                Общее время
               </h3>
               <p class="text-gray-500 dark:text-gray-400">${workout.total_time} sec</p>
             </div>
@@ -345,7 +345,7 @@
                 </svg>
               </div>
               <h3 class="mb-2 text-xl font-bold dark:text-white">
-                Rest Timeout
+                Таймер отдыха
               </h3>
               <p class="text-gray-500 dark:text-gray-400">${workout.rest_time} sec</p>
             </div>
@@ -384,7 +384,7 @@
                 </svg>
               </div>
               <h3 class="mb-2 text-xl font-bold dark:text-white">
-                Business Automation
+                описание
               </h3>
               <p class="text-gray-500 dark:text-gray-400">${workout.description}</p>
             </div>
